// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectClustersContainer renders correct snapshot for Dask clusters 1`] = `
<div>
  StackCards 
  {
  "stacks": {
    "fetching": false,
    "value": [
      {
        "name": "test-cluster",
        "type": "DASK",
        "displayName": "Test Cluster",
        "schedulerAddress": "tcp://dask-scheduler-test-cluster:8786",
        "projectKey": "project-key",
        "description": "tcp://dask-scheduler-test-cluster:8786 is the scheduler address."
      }
    ]
  },
  "typeName": "Cluster",
  "typeNamePlural": "Clusters",
  "createPermission": "projects:project-key:clusters:create",
  "showCreateButton": true,
  "copySnippets": {},
  "deletePermission": "projects:project-key:clusters:delete",
  "editPermission": "projects:project-key:clusters:edit",
  "openPermission": "projects:project-key:clusters:open",
  "scalePermission": "projects:project-key:clusters:scale"
}
</div>
`;

exports[`ProjectClustersContainer renders correct snapshot for Spark clusters 1`] = `
<div>
  StackCards 
  {
  "stacks": {
    "fetching": false,
    "value": [
      {
        "name": "test-spark-cluster",
        "type": "SPARK",
        "displayName": "Test Spark Cluster",
        "schedulerAddress": "spark://spark-scheduler-test-cluster:7077",
        "projectKey": "project-key",
        "description": "spark://spark-scheduler-test-cluster:7077 is the scheduler address."
      }
    ]
  },
  "typeName": "Cluster",
  "typeNamePlural": "Clusters",
  "createPermission": "projects:project-key:clusters:create",
  "showCreateButton": true,
  "copySnippets": {},
  "deletePermission": "projects:project-key:clusters:delete",
  "editPermission": "projects:project-key:clusters:edit",
  "openPermission": "projects:project-key:clusters:open",
  "scalePermission": "projects:project-key:clusters:scale"
}
</div>
`;

exports[`ProjectClustersContainer renders correct snapshot for all clusters 1`] = `
<div>
  StackCards 
  {
  "stacks": {
    "fetching": false,
    "value": [
      {
        "name": "test-cluster",
        "displayName": "Test Cluster",
        "schedulerAddress": "tcp://dask-scheduler-test-cluster:8786",
        "projectKey": "project-key",
        "description": "tcp://dask-scheduler-test-cluster:8786 is the scheduler address."
      }
    ]
  },
  "typeName": "Cluster",
  "typeNamePlural": "Clusters",
  "createPermission": "projects:project-key:clusters:create",
  "showCreateButton": true,
  "copySnippets": {},
  "deletePermission": "projects:project-key:clusters:delete",
  "editPermission": "projects:project-key:clusters:edit",
  "openPermission": "projects:project-key:clusters:open",
  "scalePermission": "projects:project-key:clusters:scale"
}
</div>
`;

exports[`getDialogProps returns object of props matching snapshot 1`] = `
Object {
  "clusterMaxWorkers": Object {
    "default": 4,
    "lowerLimit": 1,
    "upperLimit": 8,
  },
  "condaRequired": true,
  "dataStorageOptions": Array [],
  "formName": "createCluster",
  "onCancel": [Function],
  "onSubmit": [Function],
  "projectKey": "testproj",
  "title": "Create Cluster",
  "workerMaxCpu": Object {
    "default": 0.5,
    "lowerLimit": 0.5,
    "upperLimit": 2,
  },
  "workerMaxMemory": Object {
    "default": 4,
    "lowerLimit": 0.5,
    "upperLimit": 8,
  },
}
`;
